TIFF: support sub IFD offsets

BUG: 459840
(cherry picked from commit 96ee473d4e0a5325a25caa3275773138cc464054)